--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -5,6 +5,6 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     </head>
     <body>
-        <h1>Hello World!</h1>
+        <h1>Welcome TO ITMD - 415 MP2 Project </h1>>
     </body>
 </html>
