--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Start Page</title>
+        <title>Welcome!!</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     </head>
     <body>
-        <h1>Welcome TO ITMD - 415 MP2 Project </h1>
+          
+        <h1>Welcome to Employee Management</h1>
+
     </body>
 </html>
